# asis-library

./: Makefile  asis-library.code-workspace  package-lock.json  package.json  pyproject.toml
account/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
account/management/commands/: import_user.py  init_group.py
account/templates/: login.html  profile.html  signup.html
account/templates/include/: profile_advisor.html  profile_reader.html
account/templatetags/: helper.py
autocomplete/: urls.py  views.py
book/: admin.py  filters.py  models.py  tables.py  urls.py  views.py
book/management/commands/: import_book.py
book/templates/: book_detail.html  book_list.html
book/templates/include/: book_author.html  book_thesis_advisor.html  book_thesis_keyword.html
django_project/: settings.py  urls.py
static/css/: output.css
templates/: _base.html  home.html
