[tool.poetry]
name = "asis-library"
version = "0.1.0"
description = ""
authors = ["exkuretrol <33695301+exkuretrol@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-tables2 = "^2.7.0"
django-filter = "^24.2"
django-autocomplete-light = "^3.11.0"
django-crispy-forms = "^2.1"
environs = {extras = ["django"], version = "^11.0.0"}
crispy-tailwind = "^1.0.3"
django-easy-audit = "^1.3.6"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
djlint = "^1.34.1"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
